fpu: Implement floating-point context switching
* Perform eager saving and restoring for simplicity, but use the FS and
  XS fields to avoid superfluous data movement when the state remains
  unmodified or unused.  Truly lazy behavior would require faults from
  disabled units be distinguishable from illegal instructions via
  distinct exception codes, as is necessary for reliable preservation of
  foreign coprocessor state across context switches.
* Introduce architecture-specific <asm/switch_to.h> header.
* Compile with the -msoft-float option to induce linker errors upon
  undesired floating point usage in kernel code.
* Note: This initial implementation is not preemption-safe.

--- a/arch/riscv/Makefile
+++ b/arch/riscv/Makefile
@@ -39,6 +39,7 @@ KBUILD_CFLAGS += -mno-atomic
 endif
 
 KBUILD_CFLAGS += -Wall
+KBUILD_CFLAGS += -msoft-float
 
 ifeq ($(CONFIG_RVC),y)
 	KBUILD_CFLAGS += -mrvc
