--- a/arch/riscv/kernel/Makefile
+++ b/arch/riscv/kernel/Makefile
@@ -9,5 +9,6 @@ obj-y	:= cpu.o entry.o irq.o process.o ptrace.o reset.o setup.o \
 	   stacktrace.o vdso.o vdso/
 
 obj-$(CONFIG_EARLY_PRINTK)      += early_printk.o
+obj-$(CONFIG_SMP)		+= smpboot.o smp.o
 
 clean:
