--- a/drivers/irqchip/Kconfig
+++ b/drivers/irqchip/Kconfig
@@ -344,3 +344,16 @@ config MESON_IRQ_GPIO
          Support Meson SoC Family GPIO Interrupt Multiplexer
 
 endmenu
+
+config RISCV_PLIC
+	bool "Platform-Level Interrupt Controller"
+	depends on RISCV
+	default y
+	help
+	   This enables support for the PLIC chip found in standard RISC-V
+	   systems.  The PLIC controls devices interrupts and connects them to
+	   each core's local interrupt controller.  Aside from timer and
+	   software interrupts, all other interrupt sources (MSI, GPIO, etc)
+	   are subordinate to the PLIC.
+
+	   If you don't know what to do here, say Y.
