--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -24,6 +24,8 @@ config RISCV
 	select HAVE_MEMBLOCK
 	select HAVE_DMA_API_DEBUG
 	select HAVE_DMA_CONTIGUOUS
+	# XXX: needs a proper implementation for SMP
+	select HAVE_FUTEX_CMPXCHG if !SMP
 	select HAVE_GENERIC_DMA_COHERENT
 	select IRQ_DOMAIN
 	select NO_BOOTMEM
