--- a/arch/riscv/Kconfig
+++ b/arch/riscv/Kconfig
@@ -52,6 +52,16 @@ config PAGE_OFFSET
 	default 0xffffffff80000000 if 64BIT && MAXPHYSMEM_2GB
 	default 0xffffffe000000000 if 64BIT && MAXPHYSMEM_128GB
 
+config LMA_OFFSET
+	prompt "Load Memory address offset"
+	hex
+	default 0x00000000
+        help
+          This selects the load memory address in the vmlinux kernel, which
+	  is needed if you want to do JTAG debugging on the kernel in gdb,
+	  with VM initially off. Default is 0 for compatibility but a more
+	  realistic value would be 0x80000000 for Rocket as an example.
+
 config STACKTRACE_SUPPORT
 	def_bool y
 
